# sphinxy

./: .buildinfo  .gitignore  genindex.html  modules.html  py-modindex.html  pyproject.toml  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
docs/_build/html/_sources/: index.rst.txt
main/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
main/.doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
main/_sources/: modules.rst.txt
v0.0.1/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
v0.0.1/.doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
v0.0.1/_sources/: sphinxy.rst.txt
