[tool.poetry]
name = "sphinxy"
version = "0.1.0"
description = "Python 3.11 Base"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.1.3"
black = "^23.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
